# bug-graph

./: .gitignore  Cargo.toml  README.org  build.rs  index.html
client/: Cargo.toml
client/src/: main.rs  protocol.rs  search.rs
client/static/: index.html
res/: dump.dot  result_array-sample.json  result_array-sample2.json  result_array-sample3.json  result_array-sample4.json  result_array5.json  result_array6.json  result_array7.json  result_array8.json
src/: graph.rs  imp.rs  index.rs  journal.rs  main.rs  protocol.rs  repo.rs  web.rs
