[package]
name = "bug-graph"
version = "0.1.0"
authors = ["Richard Palethorpe <richiejp@f-m.fm>"]

[dependencies]
clap = "*"
serde_json = "*"
uuid = { version = "0.5", features = ["v1", "v4"] }
lazy_static = "*"
futures = "0.1"
actix = "0.5.6"
actix-web = "*"
log = { version = "0.4", features = ["max_level_info"] }
indradb-lib = { git = "https://github.com/indradb/indradb" }

[patch.crates-io]
actix = { path = "../actix" }
actix-web = { path = "../actix-web" }
