[package]
name = "bug-graph"
version = "0.1.0"
authors = ["Richard Palethorpe <richiejp@f-m.fm>"]
include = ["res/**/*", "src/**/*", "Cargo.toml", "README.org", "build.rs",
	   "client/src/**/*", "client/Cargo.toml", "client/Web.toml", "client/static/**/*"]

[dependencies]
clap = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.5", features = ["v1", "v4", "serde"] }
lazy_static = "*"
futures = "0.1"
actix = "0.5.6"
actix-web = "0.6.9"
log = { version = "0.4", features = ["max_level_info"] }
indradb-lib = { git = "https://github.com/indradb/indradb" }
failure = "0.1.1"
